--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,15 +10,20 @@
     <![endif]-->
 
     <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Codystar">
     <link href="stylesheets/style.css" rel="stylesheet">
+
 
   </head>
   <body>
     <div id="container">
-    
+
       <!-- Preloader -->
       <div class="preloader">
-        <span class="preloader-gif"></span>
+        <div class="preloader-gif"></div>
+        <div class="preloader-header">
+          <h1>PARTY</h1>
+        </div>
       </div>
 
       <h1>This is your new index page.</h1>
