--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 
   </head>
   <body>
+
     <div id="container">
 
       <!-- Preloader -->
@@ -26,8 +27,41 @@
         </div>
       </div>
 
-      <h1>This is your new index page.</h1>
+      <!-- <div id="boxes"> -->
 
+        <div class="row">
+          <div class="one a"></div>
+          <div class="one b"></div>
+          <div class="one c"></div>
+        </div>
+
+        <div class="row">
+          <div class="two d">Invite</div>
+          <div class="two e"></div>
+          <div class="two f"></div>
+        </div>
+
+        <div class="row">
+          <div class="three e"></div>
+          <div class="three f"></div>
+          <div class="three d"></div>
+        </div>
+
+        <div class="row">
+          <div class="four g"></div>
+          <div class="four h"></div>
+          <div class="four d"></div>
+        </div>
+
+        <div class="row">
+          <div class="five i"></div>
+          <div class="five j"></div>
+          <div class="five d"></div>
+        </div>
+
+      <!-- </div> -->
+
+      <!-- scripts -->
       <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
       <script src="javascripts/preloader.js"></script>
           
