--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,10 @@
     <![endif]-->
 
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Codystar">
-    <link href="stylesheets/style.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=BenchNine">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="icon" href='images/favicon.ico' type='image/x-icon'>
 
   </head>
   <body>
@@ -22,50 +23,68 @@
       <!-- Preloader -->
       <div class="preloader">
         <div class="preloader-gif"></div>
-        <div class="preloader-header">
-          <h1>PARTY</h1>
-        </div>
       </div>
 
-      <!-- <div id="boxes"> -->
+      <!-- Header images -->
+      <div id="header"></div>
+      <div id="header-photo"></div>
 
-        <div class="row">
-          <div class="one a"></div>
-          <div class="one b"></div>
-          <div class="one c"></div>
-        </div>
-
-        <div class="row">
-          <div class="two d">Invite</div>
-          <div class="two e"></div>
-          <div class="two f"></div>
-        </div>
-
-        <div class="row">
-          <div class="three e"></div>
-          <div class="three f"></div>
-          <div class="three d"></div>
-        </div>
-
-        <div class="row">
-          <div class="four g"></div>
-          <div class="four h"></div>
-          <div class="four d"></div>
-        </div>
-
-        <div class="row">
-          <div class="five i"></div>
-          <div class="five j"></div>
-          <div class="five d"></div>
-        </div>
-
-      <!-- </div> -->
-
-      <!-- scripts -->
-      <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-      <script src="javascripts/preloader.js"></script>
-          
+      <div id="main">
+        <h1>FASHION WEEK AFTER PARTY</h1>
+        <p>You never quite know where Karl Lagerfeld is going to take you when he puts on a Chanel show, but one thing is certain: the scene is going to be something out of your wildest fantasies. Come celebrate NYFW.</p>
       </div>
+
+      <div id="items">
+
+        <div class="item one">
+          <h3>9pm February 21, 2015</h3>
+        </div>
+
+        <div class="item two">
+          <h3>Lincoln Center, NYC</h3>
+        </div>
+
+        <div class="item three">
+          <h3>$75 per person</h3>
+        </div>
+
+        <div class="item four">
+          <h3>RSVP</h3>
+        </div>
+
+      </div>
+
+      <div id="fashion">
+
+        <div class="fashion-item fashion-one">
+          <div class="fashion-inner inner-one">
+            <p>#chanel</p>
+          </div>
+        </div>
+
+        <div class="fashion-item fashion-two">
+          <div class="fashion-inner inner-two">
+          </div>
+        </div>
+
+        <div class="fashion-item fashion-three">
+          <div class="fashion-inner inner-three">
+            <p>#nyfw</p>
+          </div>
+        </div>
+
+        <div class="fashion-item fashion-four">
+          <div class="fashion-inner inner-four">
+          </div>
+        </div>
+
+      </div>
+
     </div>
+
+    <!-- scripts -->
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="javascripts/preloader.js"></script>
+          
   </body>
 </html>
