--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,11 +26,12 @@
       </div>
 
       <!-- Header images -->
-      <div id="header"></div>
+      <header></header>
       <div id="header-photo"></div>
 
       <div id="main">
         <h1>FASHION WEEK AFTER PARTY</h1>
+        <h3>DON'T MISS IT</h3>
         <p>You never quite know where Karl Lagerfeld is going to take you when he puts on a Chanel show, but one thing is certain: the scene is going to be something out of your wildest fantasies. Come celebrate NYFW.</p>
       </div>
 
@@ -80,11 +81,21 @@
 
       </div>
 
+      <div id="map">
+        <div id="lincolncenter"></div>
+      </div>
+
     </div>
+
+    <footer>
+      <p>NOT affiliated with Chanel. NOT a real event.</p>
+    </footer>
 
     <!-- scripts -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="javascripts/preloader.js"></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBbcPLaJEgvOoBeECL8HR9NmU5ISyfOt94&sensor=false&extension=.js'></script>
+    <script src="javascripts/map.js"></script>
           
   </body>
 </html>
