--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -6,7 +6,7 @@ $secondary-font: 'BenchNine';
 
 body {
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px 0 10px;
   background: url(http://www.rabne.tk/wp-content/uploads/2015/01/Grey-background-for-site11.jpg);
   background-size: cover;
 }
@@ -37,7 +37,7 @@ body {
       background: url('/images/preloader-fashion.gif') no-repeat;
     } 
   }
-  #header {
+  header {
     background: url(http://i306.photobucket.com/albums/nn270/crystalarlene/chanel.png) no-repeat;
     width: 250px;
     height: 170px;
@@ -61,12 +61,17 @@ body {
     h1 {
       font-family: $primary-font;
       font-size: 30px;
-      padding: 10px;
+      padding: 0px;
+    }
+    h3 {
+      font-family: $primary-font;
+      font-size: 25px;
+      padding: 0px;
     }
     p {
-      font-size: 20px;
       font-family: $primary-font;
-      padding: 10px;
+      font-size: 20px;
+      padding: 0px;
     }
   }
   #items {
@@ -99,7 +104,7 @@ body {
     }
   }
   #fashion {
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 300px;
 
@@ -166,6 +171,39 @@ body {
       background: url(http://www3.pictures.zimbio.com/gi/Chanel+Runway+Paris+Fashion+Week+Spring+Summer+j2FbQU4J3Tvl.jpg);
       background-size: cover;
     }
+  }
+  #map {
+    max-width: 960px;
+    width: 100%;
+    display: inline-block;
+
+     #lincolncenter {
+        height:300px;
+        display: block;
+        border: 5px solid $pink;
+    }
+    .gm-style-iw * {
+        display: block;
+        width: 100%;
+    }
+    .gm-style-iw h4, .gm-style-iw p {
+        margin: 0;
+        padding: 0;
+    }
+    .gm-style-iw a {
+        color: #4272db;
+    }
+  }
+}
+
+footer {
+  height: 50px;
+  width: 100%;
+
+  p {
+    font-family: "Oswald";
+    font-size: 20px;
+    text-align: center;
   }
 }
 
