--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,11 +49,20 @@
           <h3>$75 per person</h3>
         </div>
 
-        <div class="item four">
-          <h3>RSVP</h3>
+        <div class="item four"> 
+          <h3><a href="#openModal">RSVP</a></h3>
+          <div id="openModal" class="modalDialog">
+            <div class="modal-box">
+              <div class="modal-text">
+                  This should be in the RSVP form
+                  <form>
+                  </form>   
+                </div>
+              </div>
+              <a href="#close" title="Close" class="close">X</a>
+            </div>  
+          </div>
         </div>
-
-      </div>
 
       <div id="fashion">
 
