--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -100,6 +100,56 @@ body {
         font-size: 20px;
         font-family: $primary-font;
         text-align: center;
+
+        a {
+          text-decoration: none;
+          color: #000;
+        }
+      }
+    }
+    .four {
+      .modalDialog {
+        position: fixed;
+        overflow: scroll;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 99999;
+        opacity:0;
+        transition-duration: .5s;
+        transition-property: opacity;
+        pointer-events: none;
+
+        .modal-box {
+          color: #000;
+          width: 300px;
+          top: 125px;
+          padding-bottom: 17px;
+        }
+      }
+      .modalDialog:target {
+        opacity: 1;
+        pointer-events: auto;
+        transition-duration: .5s;
+      }
+      .modalDialog > .modal-box {
+        position: relative;
+        color: #000;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 3px solid #000;
+        background: #FFF;
+      }
+      .close {
+        color: #000;
+        float: none;
+        font-family: 'Playfair Display';
+        font-size: 15px;
+        opacity: 1;
+        margin-left: 120px;
+        font-weight: normal;
       }
     }
   }
@@ -256,6 +306,7 @@ footer {
     }
   }
 }
+
 
 
 
